# ifly-workflow-mcp-server

./: README.md  pyproject.toml
src/mcp_server/: server.py
src/mcp_server/entities/: ifly_client.py  workflow_api.py
src/test/: test_ifly_api.py  test_server.py
